--- a/amrmtt_robot/CMakeLists.txt
+++ b/amrmtt_robot/CMakeLists.txt
@@ -3,15 +3,15 @@ project(amrmtt_robot)
 
 find_package(ament_cmake REQUIRED)
 
-# ติดตั้งทุก directory ที่มีไฟล์สำคัญ
-install(
-  DIRECTORY launch urdf meshes rviz config
-  DESTINATION share/${PROJECT_NAME}
-)
+# # ติดตั้งทุก directory ที่มีไฟล์สำคัญ
+# install(
+#   DIRECTORY launch urdf meshes rviz config gazebo_gz_ros
+#   DESTINATION share/${PROJECT_NAME}
+# )
 
 # ติดตั้ง folder ทั้งหมดที่ใช้ใน package
 install(
-  DIRECTORY launch description meshes rviz config
+  DIRECTORY launch description meshes rviz config gazebo_gz_ros
   DESTINATION share/${PROJECT_NAME}
 )
 ament_package()
